--- a/src/css/About.css
+++ b/src/css/About.css
@@ -1,97 +1,125 @@
 .gridHeader {
     position: absolute;
     left: 50%;
-    top: 120%;
+    top: 124%;
     transform: translate(-50%, -50%);
     color: white;
     font-family: sans-serif;
     font-size: 1.5rem;
 
+}
 
+
+
+
+.infH {
+    position: absolute;
+    left: 50%;
+    top: 114%;
+    transform: translate(-50%, -50%);
+    color: white;
+    font-family: sans-serif;
+    background-color: rgba(11, 159, 196);
+    padding: 1rem;
+    border-radius: 70px;
+    width: 180px;
+    display: flex;
+    justify-content: center;
 }
 
 
 .gridContainer {
-    background: rgb(11, 159, 196);
-
+    background-color: rgb(20, 20, 20);
+    border-top: 3px solid rgb(11, 159, 196);
+    border-bottom: 3px solid rgb(255, 255, 255);
 
     width: 100%;
     height: 60%;
     top: 130%;
-    position: absolute; 
-
-
-
-    display: grid; 
-    grid-template-columns: 1fr 1fr 1fr; 
-    grid-template-rows: 1fr 1fr; 
-    gap: 20px 10px; 
-    grid-template-areas: 
-      ". . ."
-      ". . ."; 
-  
-    
-
-}
-
-.div1{
-    align-items: center;
-    justify-content: center;
-    display: flex;
-    
-}
-
-.itemwrap{
-    width: 50%;
-    background-color: rgba(255, 255, 255, 0.8);
-    border: 1px solid rgba(0, 0, 0, 0.8);
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* 
-.divCon {
-    justify-content: center;
-    align-items: center;
-    display: flex;
     position: absolute;
-    left: 50%;
-    top: 137%;
-    transform: translate(-50%, -50%);
+
+    display: grid;
 }
 
-.divCon2 {
-    justify-content: center;
-    align-items: center;
-    display: flex;
+.grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr;
+
+    column-gap: 2.5rem;
     position: absolute;
+    top: 40%;
     left: 50%;
-    top: 165%;
     transform: translate(-50%, -50%);
+    justify-content: center;
+    height: 45%;
+    width: 40%;
 }
 
 .div1 {
-    border: 0.1rem solid rgb(11, 159, 196);
-    margin: 15px; 
-    background: rgb(20, 20, 20);
-    color: white;
-    font-size: 1rem;
-    font-family: sans-serif;
-    padding: 5rem; 
-    max-width: 100%;
-    min-height: 100%;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    position: relative;
+    border: 3px solid rgba(255, 255, 255, 0.689);
+    padding: 1rem;
+    border-radius: 10px;
+    box-shadow: 0 0.5px 3px rgba(11, 159, 196);
 }
- */
+
+.div1:hover {
+    box-shadow: 0 2px 12px rgba(11, 159, 196);
+    transition-duration: 0.2s;
+}
+
+
+.itemH {
+    position: relative;
+    padding: 1rem 0rem;
+    color: white;
+    font-family: sans-serif;
+    top: 0%;
+
+}
+
+.itemText {
+    color: white;
+    font-family: sans-serif;
+}
+
+.imgs {
+    width: 25px;
+    margin-bottom: 0.3rem;
+    top: 2%;
+    position: relative;
+
+}
+
+.itemwrap {
+    height: 100%;
+    width: 100%;
+}
+
+
+
+
+@media screen and (max-width: 800px) {
+
+
+
+    .grid {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 1fr 1fr;
+        row-gap: 1rem;
+        top: 27%;
+        width: 90%;
+    }
+
+    .gridContainer {
+
+        height: 90%;
+    }
+
+
+}
