--- a/src/css/About.css
+++ b/src/css/About.css
@@ -6,7 +6,8 @@
     color: white;
     font-family: sans-serif;
     font-size: 1.5rem;
-
+   
+    
 }
 
 
@@ -39,6 +40,10 @@
     position: absolute;
 
     display: grid;
+
+
+    
+
 }
 
 .grid {
@@ -65,6 +70,8 @@
     padding: 1rem;
     border-radius: 10px;
     box-shadow: 0 0.5px 3px rgba(11, 159, 196);
+    background-color:rgba(0, 0, 0, 0.5);
+
 }
 
 .div1:hover {
