--- a/src/css/About.css
+++ b/src/css/About.css
@@ -27,10 +27,10 @@
     display: flex;
     justify-content: center;
 }
-
+ 
 
 .gridContainer {
-    background-color: rgb(20, 20, 20);
+    background-color: rgba(20, 20, 20, 0.421);
     border-top: 3px solid rgb(11, 159, 196);
     border-bottom: 3px solid rgb(255, 255, 255);
 
@@ -38,25 +38,28 @@
     height: 60%;
     top: 130%;
     position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
-    display: grid;
+}
 
-
-
-
+.picST {
+    width: 100%;
+    height: 60%;
+    top: 130%;
+    position: absolute;
+    z-index: -5;
+    object-fit:none;
 }
 
 .grid {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr;
-
     column-gap: 2.5rem;
-    position: absolute;
-    top: 40%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    justify-content: center;
+
+    align-content: center;
     height: 45%;
     width: 40%;
 }
@@ -66,6 +69,7 @@
     justify-content: center;
     display: flex;
     position: relative;
+
     border: 3px solid rgba(255, 255, 255, 0.689);
     padding: 1rem;
     border-radius: 10px;
@@ -120,6 +124,7 @@
         grid-template-rows: 1fr 1fr 1fr;
         row-gap: 1rem;
         top: 27%;
+        justify-content: center;
         width: 90%;
     }
 
@@ -127,7 +132,11 @@
 
     .gridContainer {
 
-        height: 90%;
+        height: 80%;
+    }
+
+    .picST {
+        height: 80%;
     }
 
 
