--- a/src/css/Footer.css
+++ b/src/css/Footer.css
@@ -5,16 +5,18 @@
     color: white;
     display: flex;
     justify-content: center;
-    position: absolute;
-    left: 50%;
-    top: 460%;
-    transform: translate(-50%, -50%);
-    width: 100%;
     padding: 4.5rem;
-    height: 40%;
+    position: relative;
 
 
+
+    position: absolute;
+    top: 450%;
+    width: 100%;
+    height: 250px;
 }
+
+
 
 .fotGrid {
     display: grid;
@@ -79,8 +81,7 @@
 @media screen and (max-width: 550px) {
 
     .footer {
-        height: 55%;
-        top: 500%;
+        display: none;
     }
 
 
@@ -94,7 +95,7 @@
         width: 90%;
     }
 
-    .fotDiv2{
+    .fotDiv2 {
         left: -20%;
     }
 
