--- a/src/css/Portfolio.css
+++ b/src/css/Portfolio.css
@@ -52,7 +52,8 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr;
-    column-gap: 2.5rem;
+    -moz-column-gap: 2.5rem;
+         column-gap: 2.5rem;
 
     align-content: center;
 
@@ -125,7 +126,8 @@
 
 .picS {
     z-index: -5;
-    object-fit: cover;
+    -o-object-fit: cover;
+       object-fit: cover;
     position: absolute;
 
     width: 100%;
