--- a/src/css/Contact.css
+++ b/src/css/Contact.css
@@ -19,7 +19,9 @@
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr;
 
-    column-gap: 0.3rem;
+    -moz-column-gap: 0.3rem;
+
+         column-gap: 0.3rem;
     position: absolute;
     top: 52%;
     left: 50%;
@@ -36,8 +38,10 @@
 .cPic {
     max-width: 100%;
     height: 580px;
-    filter: brightness(30%);
-    object-fit: cover;
+    -webkit-filter: brightness(30%);
+            filter: brightness(30%);
+    -o-object-fit: cover;
+       object-fit: cover;
     position: relative;
     left: 3%;
 }
@@ -283,8 +287,10 @@ label {
 .cPic {
     width: 100%;
     height: 580px;
-    filter: brightness(30%);
-    object-fit: cover;
+    -webkit-filter: brightness(30%);
+            filter: brightness(30%);
+    -o-object-fit: cover;
+       object-fit: cover;
     position: relative;
     left: 3%;
 }
