--- a/src/css/Project.css
+++ b/src/css/Project.css
@@ -1,13 +1,5 @@
-* {
-    border: 2px solid red;
-
-}
-
-
-
 .projectContainer {
     color: white;
-    background: red;
     position: absolute;
     width: 100%;
     height: 60%;
@@ -23,7 +15,6 @@
     display: flex;
 
 
-    background: blue;
     width: 80%;
 
     align-items: center;
@@ -31,13 +22,13 @@
 
 
 
-}
+} 
 
 
 .part {
     position: relative;
 
-    background: green;
+    background-color: #5e5e5e5b;
     display: block;
     text-align: center;
 
@@ -47,14 +38,13 @@
 
     border-radius: 25px;
 
-
+    font-family: sans-serif;
 }
 
 
 .partTwo {
     position: relative;
-
-    background: yellow;
+    font-family: sans-serif;
     text-align: left;
 
     margin: 0px auto;
@@ -67,27 +57,43 @@
     display: block;
     margin: 0px auto;
     position: relative;
-    top: 25%;
-    transform: translateY(-25%);
+    top: 50%;
+    transform: translateY(-50%);
     width: 85%;
     height: 85%;
-    object-fit: cover;
-
+    -o-object-fit: cover;
+       object-fit: cover;
 }
 
- 
+
 .projectH {
-    position: relative;
-    top: 2%;
+    position: absolute;
+    left: 7.5%;
+    top: 2.7%;
+
+    font-size: 1rem;
 }
 
 .project-name {
     margin-bottom: 3rem;
-    color: red;
+
+    color: white;
+    font-size: 4rem;
 }
 
 .project-info {
-    color: orange;
+    width: 90%;
+    line-height: 2;
+    color: white;
+
+}
+
+.space {
+    display: end;
+}
+
+.project-end {
+    color: rgb(11, 159, 196);
 }
 
 @media screen and (max-width: 800px) {
@@ -115,6 +121,26 @@
     .partTwo {
         margin: 0;
     }
+
+
+    .space {
+        position: absolute;
+        top: 153%;
+        color: white;
+        background-color: black;
+        width: 100%;
+        height: 30px;
+    }
+
+
+
+    .project-info {
+        width: 100%;
+        text-align: center;
+
+    }
+
+
 
 
 }
