--- a/src/css/About.css
+++ b/src/css/About.css
@@ -7,10 +7,9 @@
     font-family: sans-serif;
     font-size: 1.5rem;
 
+    transition-duration: 0.7s;
 
 }
-
-
 
 
 .infH {
@@ -27,133 +26,296 @@
     display: flex;
     justify-content: center;
 }
- 
+
 
 .gridContainer {
-    border-top: 3px solid rgb(11, 159, 196);
-    border-bottom: 3px solid rgb(255, 255, 255);
 
     width: 100%;
     height: 60%;
     top: 130%;
     position: absolute;
     display: flex;
-    justify-content: center;
     align-items: center;
 
+
+
 }
- 
+
 .picSE {
-    position: absolute;
-    top: 130%;
-    text-align: center;
-    width: 100%;
-    
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
 }
 
 
 .picST {
-    position: relative;
-    
     width: 100%;
-    height: 450px;
     z-index: -5;
-    -o-object-fit: cover;
-       object-fit: cover;
+    -o-object-fit: contain;
+    object-fit: contain;
+}
+
+
+.expBtn {
+    position: absolute;
+
+    left: 50%;
+    transform: translate(-50%);
+
+    height: 60px;
+    width: 200px;
+
+    border: 3px solid white;
+    background: black;
+    color: white;
+
+
+}
+
+.expBtn:hover {
+
+
+    border: 3px solid rgba(11, 159, 196);
+    cursor: pointer;
+    color: rgb(196, 178, 11);
+
+    transition-duration: 0.2s;
+
+
+
 }
 
 
 
-
-.grid {
+.about-Grid {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr;
-    -moz-column-gap: 2.5rem;
-         column-gap: 2.5rem;
 
-    align-content: center;
-    height: 45%;
-    width: 40%;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    column-gap: 2.5rem;
+    row-gap: 1.7rem;
+
+    width: 100%;
+    height: 100%;
+
+
+
+
 }
 
-.div1 {
-    align-items: center;
-    justify-content: center;
-    display: flex;
+.grid-div {
     position: relative;
 
-    border: 3px solid rgba(255, 255, 255, 0.689);
-    padding: 1rem;
-    border-radius: 10px;
-    box-shadow: 0 0.5px 3px rgba(11, 159, 196);
-    background-color: rgba(0, 0, 0, 0.5);
-
 }
 
-.div1:hover {
-    box-shadow: 0 2px 12px rgba(11, 159, 196);
+.linkd-icon {
+    position: relative;
+    top: 7%;
+    left: 7%;
+    width: 40px;
+    height: 40px;
+
+    color: rgba(11, 159, 196);
+
+    animation: myanimation 5s infinite;
+}
+
+.git-icon {
+
+    position: relative;
+    left: 10%;
+    top: 7%;
+
+    width: 40px;
+    height: 40px;
+
+    color: rgba(11, 159, 196);
+
+    animation: myanimation 3s infinite;
+}
+
+.git-icon:hover {
+
+    width: 45px;
+    height: 45px;
+    cursor: pointer;
     transition-duration: 0.2s;
 }
 
+.linkd-icon:hover {
 
-.itemH {
+    width: 45px;
+    height: 45px;
+    transition-duration: 0.2s;
+    cursor: pointer;
+}
+
+
+@keyframes myanimation {
+    0% {
+        color: rgb(255, 255, 255);
+    }
+
+    25% {
+        color: rgb(165, 213, 224);
+    }
+
+    50% {
+        color: rgb(114, 186, 204);
+    }
+
+    75% {
+        color: rgb(104, 200, 224);
+    }
+
+    100% {
+        color: rgba(11, 159, 196);
+    }
+}
+
+
+
+
+.about-text {
+
     position: relative;
-    padding: 1rem 0rem;
-    color: white;
+    left: 7%;
+    top: 25%;
+    width: 93%;
     font-family: sans-serif;
-    top: 0%;
+    color: rgba(11, 159, 196);
+    line-height: 1.8;
+    font-size: 1rem;
 
+    letter-spacing: 1px;
 }
 
-.itemText {
-    color: white;
-    font-family: sans-serif;
-}
 
-.imgs {
-    width: 25px;
-    margin-bottom: 0.3rem;
-    top: 2%;
+.about-content-header {
+
     position: relative;
+    left: 7%;
+    top: 20%;
+    width: 50%;
+    font-family: sans-serif;
+    color: rgba(255, 255, 255);
+    font-size: 1.2rem;
+    letter-spacing: 3px;
+
 
 }
 
-.itemwrap {
-    height: 100%;
-    width: 100%;
+
+.content-grid {
+
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+
+
+
+
+
+    position: relative;
+    left: 7%;
+    top: 25%;
+    font-family: sans-serif;
+    color: rgba(255, 255, 255, 0.651);
+
+    letter-spacing: 2px;
+    line-height: 1.5rem;
+    font-size: 0.9rem;
+    width: 90%;
+    height: 60%;
+
+
+
+}
+
+.content {
+    display: flex;
+    align-items: center;
 }
 
 
+.graph {
+    display: block;
+    position: relative;
+    max-width: 50%;
+    max-height: 100%;
+    left: 50%;
+    transform: translate(-50%);
+}
 
+#over{ 
+    
+    text-decoration: none;
+    background: none; 
+}
 
 @media screen and (max-width: 800px) {
 
 
 
-    .grid {
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-template-rows: 1fr 1fr 1fr;
-        row-gap: 1rem;
-        top: 27%;
-        justify-content: center;
-        width: 90%;
-    }
 
 
 
     .gridContainer {
 
-        height: 80%;
+        height: 85%;
     }
 
     .picST {
         height: 80%;
     }
 
+    .picSE {
+        width: 100%;
+    }
 
 
 
+
+}
+
+
+@media screen and (max-width: 1200px) {
+
+    .about-Grid {
+
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+
+    }
+
+}
+
+
+@media screen and (max-width: 700px) {
+
+    .about-Grid {
+
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 1fr 1fr;
+
+    }
+
+
+    .content-grid {
+        row-gap: 1rem;
+        column-gap: 2rem;
+    }
+
+    .content {
+        line-height: 1.7rem;
+    }
+
+    .gridContainer {
+
+        border-left: 3px solid rgba(11, 159, 196);
+    }
 
 }
