--- a/src/css/Contact.css
+++ b/src/css/Contact.css
@@ -6,11 +6,11 @@
 
     top: 350%;
     left: 50%;
-    transform: translate(-50%); 
+    transform: translate(-50%);
 
     display: grid;
     background: rgb(20, 20, 20);
-    border-radius: 4rem; 
+    border-radius: 4rem;
 
 }
 
@@ -21,7 +21,7 @@
 
     -moz-column-gap: 0.3rem;
 
-         column-gap: 0.3rem;
+    column-gap: 0.3rem;
     position: absolute;
     top: 52%;
     left: 50%;
@@ -39,9 +39,9 @@
     max-width: 100%;
     height: 580px;
     -webkit-filter: brightness(30%);
-            filter: brightness(30%);
+    filter: brightness(30%);
     -o-object-fit: cover;
-       object-fit: cover;
+    object-fit: cover;
     position: relative;
     left: 3%;
 }
@@ -84,8 +84,9 @@
     border-bottom: 1px solid rgb(110, 110, 110);
 }
 
-.input1:focus, .input4:focus { 
-    border-bottom-color: rgb(11, 159, 196); 
+.input1:focus,
+.input4:focus {
+    border-bottom-color: rgb(11, 159, 196);
 }
 
 
@@ -120,8 +121,8 @@ label {
     position: absolute;
     height: 96.5%;
 
-   
-   
+
+
 }
 
 
@@ -214,7 +215,7 @@ label {
     left: 5%;
     top: 43%;
 }
- 
+
 
 .emIcon {
     position: absolute;
@@ -240,69 +241,67 @@ label {
     color: white;
 }
 
-.cIntro{ 
+.cIntro {
     position: absolute;
     top: 337%;
     left: 50%;
     transform: translate(-50%);
 }
 
-.Intro{
+.Intro {
     color: white;
     font-size: 2.3rem;
 }
-.Intro2{
+
+.Intro2 {
     color: white;
 
 }
 
-.introSpan{
+.introSpan {
     color: rgb(11, 159, 196);
 }
 
- 
+
 
 @media screen and (max-width: 1380px) {
 
-.ContactGrid{
-    top: 360%;
-    height: 80%;
-    background: 0;
-    width: 85%;
+    .ContactGrid {
+        top: 360%;
+        height: 80%;
+        background: 0;
+        width: 85%;
+    }
+
+    .grid3 {
+        display: flex;
+        width: 100%;
+    }
+
+    .div3 {
+        width: 100%;
+        left: 0%;
+        position: absolute;
+        height: 96.5%;
+    }
+
+
+    .cPic {
+        width: 100%;
+        height: 580px;
+        -webkit-filter: brightness(30%);
+        filter: brightness(30%);
+        -o-object-fit: cover;
+        object-fit: cover;
+        position: relative;
+        left: 3%;
+    }
+
+    .contactInformation {
+        display: none;
+    }
+
+
+
+
 }
-
-.grid3{
-    display: flex;
-    width: 100%; 
-}
-
-.div3{
-    width: 100%;
-    left: 0%;
-    position: absolute;
-    height: 96.5%;
-}
-
-
-.cPic {
-    width: 100%;
-    height: 580px;
-    -webkit-filter: brightness(30%);
-            filter: brightness(30%);
-    -o-object-fit: cover;
-       object-fit: cover;
-    position: relative;
-    left: 3%;
-}
-
-.contactInformation{ 
-    display: none;
-}
-
-
-
-
-}
-
-
-    
