--- a/src/css/Portfolio.css
+++ b/src/css/Portfolio.css
@@ -71,8 +71,9 @@
     padding: 1rem;
     border-radius: 10px;
     box-shadow: 0 0.5px 3px rgb(255, 255, 255);
+    width: 100%;
+    height: 100%;
 }
-
 .div12:hover {
     box-shadow: 0 2px 12px rgb(255, 255, 255);
     transition-duration: 0.2s;
@@ -97,6 +98,7 @@
 
 
 .itemwrap2 {
+    position: relative;
     height: 100%;
     width: 100%;
 }
