--- a/src/css/About.css
+++ b/src/css/About.css
@@ -1,23 +1,29 @@
+.about-section {
+    width: 100%;
+    padding: 1em 0;
+}
+
+
+
+
 .gridHeader {
-    position: absolute;
-    left: 50%;
-    top: 122%;
-    transform: translate(-50%);
     color: white;
     font-family: sans-serif;
     font-size: 1.5rem;
     width: 90%;
     text-align: center;
-
+    margin: 0 auto;
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
+    width: fit-content;
+    margin-top: 20px;
     transition-duration: 0.7s;
+    margin-bottom: 30px;
+
 
 }
 
 .infH {
-    position: absolute;
-    left: 50%;
-    top: 114%;
-    transform: translate(-50%, -50%);
     color: white;
     font-family: sans-serif;
     background-color: rgba(11, 159, 196);
@@ -26,15 +32,14 @@
     width: 180px;
     display: flex;
     justify-content: center;
+    margin: 0 auto;
+    margin-bottom: 30px;
 }
 
 
 .gridContainer {
 
     width: 100%;
-    height: 60%;
-    top: 130%;
-    position: absolute;
     display: flex;
     align-items: center;
 
@@ -59,17 +64,15 @@
 
 
 .expBtn {
-    position: absolute;
-
-    left: 50%;
-    transform: translate(-50%);
 
     height: 60px;
     width: 200px;
-
+    position: absolute;
     border: 3px solid white;
     background: black;
     color: white;
+    left: 50%;
+    transform: translate(-50%);
 
 
 }
@@ -108,12 +111,12 @@
 
 .grid-div {
     position: relative;
+    margin-bottom: 30px;
 
 }
 
 .linkd-icon {
     position: relative;
-    top: 7%;
     left: 7%;
     width: 40px;
     height: 40px;
@@ -129,7 +132,6 @@
 
     position: relative;
     left: 10%;
-    top: 7%;
 
     width: 40px;
     height: 40px;
@@ -209,11 +211,26 @@
 .about-text {
 
     position: relative;
-    left: 7%;
-    top: 25%;
+    margin: 15px auto;
     width: 93%;
     font-family: sans-serif;
     color: rgba(11, 159, 196);
+    line-height: 1.8;
+    font-size: 1rem;
+
+    letter-spacing: 1px;
+
+
+}
+
+
+.about-text2 {
+
+    position: relative;
+    margin: 0 auto;
+    width: 93%;
+    font-family: sans-serif;
+    color: white;
     line-height: 1.8;
     font-size: 1rem;
 
@@ -225,7 +242,6 @@
 
     position: relative;
     left: 7%;
-    top: 20%;
     width: 50%;
     font-family: sans-serif;
     color: rgba(255, 255, 255);
@@ -235,6 +251,10 @@
 
 }
 
+#a-content-h {
+    color: rgba(255, 255, 255);
+    margin-bottom: 20px;
+}
 
 .content-grid {
 
@@ -248,7 +268,6 @@
 
     position: relative;
     left: 7%;
-    top: 25%;
     font-family: sans-serif;
     color: rgba(255, 255, 255, 0.651);
 
@@ -282,6 +301,23 @@
     text-decoration: none;
     background: none;
 }
+
+.hidden {
+    display: none;
+}
+
+.about-pic {
+    width: 90%;
+    max-height: 270px;
+    -o-object-fit: cover;
+    object-fit: cover;
+    -o-object-position: top;
+    object-position: top;
+    border-radius: 20px;
+}
+
+
+
 
 @media screen and (max-width: 800px) {
 
@@ -328,7 +364,7 @@
 
         display: grid;
         grid-template-columns: 1fr;
-        grid-template-rows: 1fr 1fr 1fr;
+        grid-template-rows: 1fr auto 1fr 1fr;
 
     }
 
