--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -1,63 +1,55 @@
+.home-section {
+    position: relative;
+    width: 100%;
+    min-height: 100vh;
+    padding: 1em 0;
+    display: flex;
+}
+
+.home-wrap {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+}
+
 .startHeader {
     color: white;
-    display: flex;
     padding: 0.5rem;
-    position: absolute;
-    top: 40%;
-    left: 40.3%;
+    text-align: left;
+
     font-family: sans-serif;
-    justify-content: center;
+    font-size: 2.3rem;
+
 }
 
 .launch {
     color: rgb(72, 210, 235);
-    display: flex;
     padding: 0.5rem;
-    position: absolute;
-    top: 50%;
-    left: 48%;
-    font-size: 1.9rem;
+    font-size: 2.2rem;
+    margin: 0 auto;
+    width: fit-content;
     font-family: sans-serif;
 }
 
 .viewMore {
 
-    position: absolute;
-    top: 70%;
+    position: relative;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%);
     border: 0.1rem solid white;
     background: rgb(20, 20, 20);
     color: white;
     padding: 7px 25px;
     font-size: 0.9rem;
+    margin-top: 40px;
+
 }
 
 .viewMore:hover {
+    cursor: pointer;
     transition-duration: 0.7s;
     border-color: rgb(11, 159, 196);
     background: rgb(11, 159, 196);
-}
-
-
-@media screen and (max-width: 495px) {
-    .startHeader {
-        left: 15%;
-        top: 39%;
-    }
-
-    .launch {
-        top: 50%;
-        left: 30%;
-    }
-
-
-}
-
-@media screen and (min-height: 850px) {
-    .launch {
-        top: 48%;
-        left: 40%;
-    }
-
 }
