--- a/src/css/Project.css
+++ b/src/css/Project.css
@@ -1,10 +1,9 @@
 .projectContainer {
     color: white;
-    position: absolute;
+    position: relative;
     width: 100%;
-    height: 60%;
-    top: 23%;
-
+    min-height: 100vh;
+    padding: 7em 0;
     display: flex;
     justify-content: center;
 
@@ -12,32 +11,24 @@
 }
 
 .projectGrid {
-    display: flex;
-
-
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-row: 1fr;
     width: 80%;
-
     align-items: center;
-
-
-
 
 }
 
 
 .part {
     position: relative;
-
     background-color: #5e5e5e5b;
     display: block;
     text-align: center;
-
     margin: 0px auto;
-    width: 100%;
-    height: 100%;
-
+    width: max(300px, 70%);
+    height: 70%;
     border-radius: 25px;
-
     font-family: sans-serif;
 }
 
@@ -49,8 +40,6 @@
 
     margin: 0px auto;
     width: 100%;
-    height: 50%;
-    margin-left: 20px;
 }
 
 .gIcon {
@@ -73,14 +62,24 @@
 
 }
 
+
+
+.pro-img-con {
+    position: relative;
+    width: 85%;
+    height: 85%;
+    left: 50%;
+    top: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
+
 .projectPic {
     display: block;
     margin: 0px auto;
     position: relative;
-    top: 50%;
-    transform: translate(0, -50%);
-    width: 85%;
-    height: 85%;
+    width: 100%;
+    height: 100%;
     -o-object-fit: contain;
     object-fit: contain;
 }
@@ -94,15 +93,13 @@
     position: absolute;
     left: 7.5%;
     top: 2.7%;
-
     font-size: 1rem;
 }
 
 .project-name {
     margin-bottom: 3rem;
-
     color: white;
-    font-size: 4rem;
+    font-size: clamp(2rem, 5vw, 3rem);
 }
 
 
@@ -113,50 +110,23 @@
 
 }
 
-.space {
-    display: end;
-}
-
-.project-end {
-    color: rgb(11, 159, 196);
-}
 
 @media screen and (max-width: 800px) {
 
     .projectGrid {
         grid-template-columns: 1fr;
         grid-template-rows: 1fr 1fr;
-
-    }
-
-    .projectGrid {
-
-        flex-wrap: wrap;
-        width: 90%;
-
-
-
+        width: max(300px, 90%);
 
     }
 
     .part {
-        margin: 20px 0;
+        margin: 0 auto;
     }
 
     .partTwo {
         margin: 0;
     }
-
-
-    .space {
-        position: absolute;
-        top: 153%;
-        color: white;
-        background-color: black;
-        width: 100%;
-        height: 30px;
-    }
-
 
 
     .project-info {
@@ -172,12 +142,4 @@
 
 
 
-}
-
-
-
-@media screen and (max-width: 500px) {
-    .projectContainer {
-        top: 10%;
-    }
 }
