--- a/src/css/About.css
+++ b/src/css/About.css
@@ -1,13 +1,13 @@
 .about-section {
     width: 100%;
-    padding: 1em 0;
+    padding: 5em 0;
 }
 
 
 
 
 .gridHeader {
-    color: white;
+    color: rgba(255, 255, 255, 0.6);
     font-family: sans-serif;
     font-size: 1.5rem;
     width: 90%;
@@ -26,14 +26,9 @@
 .infH {
     color: white;
     font-family: sans-serif;
-    background-color: rgba(11, 159, 196);
-    padding: 1rem;
-    border-radius: 70px;
-    width: 180px;
-    display: flex;
-    justify-content: center;
     margin: 0 auto;
-    margin-bottom: 30px;
+    text-align: center;
+    font-size: clamp(1.8rem, 4vw, 2rem);
 }
 
 
