--- a/src/css/Portfolio.css
+++ b/src/css/Portfolio.css
@@ -1,6 +1,6 @@
 .portfolio-section {
     width: 100%;
-    padding: 8em 0;
+    padding: 0 0 4em 0;
 }
 
 
@@ -12,15 +12,10 @@
 
 
 .portH2 {
-    color: rgb(11, 159, 196);
-    font-family: sans-serif;
-    background-color: rgb(255, 255, 255);
-    padding: 1rem;
-    border-radius: 70px;
-    width: 180px;
-    display: flex;
-    justify-content: center;
     margin: 25px auto;
+    text-align: center;
+    font-size: 2rem;
+    color: white;
 
 }
 
