--- a/src/css/Project.css
+++ b/src/css/Project.css
@@ -3,7 +3,7 @@
     position: relative;
     width: 100%;
     min-height: 100vh;
-    padding: 7em 0;
+    padding: 7em 0 0 0;
     display: flex;
     justify-content: center;
 
@@ -27,11 +27,10 @@
     text-align: center;
     margin: 0px auto;
     width: max(300px, 70%);
-    height: 70%;
+    min-height: 300px;
     border-radius: 25px;
     font-family: sans-serif;
 }
-
 
 .partTwo {
     position: relative;
@@ -67,19 +66,16 @@
 .pro-img-con {
     position: relative;
     width: 85%;
-    height: 85%;
-    left: 50%;
-    top: 50%;
-    -webkit-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
+    margin: 0 auto;
+    margin-bottom: 20px;
 }
 
 .projectPic {
     display: block;
     margin: 0px auto;
     position: relative;
+    max-height: 290px;
     width: 100%;
-    height: 100%;
     -o-object-fit: contain;
     object-fit: contain;
 }
@@ -90,10 +86,8 @@
 }
 
 .projectH {
-    position: absolute;
-    left: 7.5%;
-    top: 2.7%;
     font-size: 1rem;
+    margin: 10px auto 20px auto;
 }
 
 .project-name {
@@ -111,12 +105,14 @@
 }
 
 
+
 @media screen and (max-width: 800px) {
 
     .projectGrid {
         grid-template-columns: 1fr;
-        grid-template-rows: 1fr 1fr;
+        grid-template-rows: auto 1fr;
         width: max(300px, 90%);
+        row-gap: 25px;
 
     }
 
