--- a/src/css/Portfolio.css
+++ b/src/css/Portfolio.css
@@ -4,7 +4,6 @@
 }
 
 
-
 #port-animation {
     max-width: 550px;
     margin: 0 auto;
@@ -46,80 +45,63 @@
 
 .grid2 {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
     -moz-column-gap: 2.5rem;
-    column-gap: 2.5rem;
-    row-gap: 20px;
+    column-gap: 1.5rem;
 
     align-content: center;
-
-
-    height: 35%;
     width: max(300px, 750px);
 }
 
-.div12 {
-    position: relative;
-    border: 3px solid rgba(255, 255, 255, 0.689);
-    border-radius: 10px;
-    box-shadow: 0 0.5px 3px rgb(255, 255, 255);
+
+.div1 {
+    grid-area: 1 / 1 / 2 / 2;
+    max-height: 180px;
+}
+
+.div2 {
+    grid-area: 1 / 2 / 2 / 3;
+    max-height: 180px;
+}
+
+.div3 {
+    grid-area: 2 / 1 / 3 / 3;
+    max-height: 200px;
+}
+
+.project-pic {
     width: 100%;
-    min-height: 250px;
-    padding: 10px 10px 0 10px;
-    background-color: rgba(0, 0, 0, 0.35);
+    max-height: 170px;
+    object-fit: cover;
+    object-position: top;
 }
 
-.div12:hover {
-    box-shadow: 0 2px 12px rgb(255, 255, 255);
-    transition-duration: 0.2s;
-}
-
-
-.itemH2 {
+#home-video {
     position: relative;
-    padding: 1rem 0rem;
-    color: rgb(11, 159, 196);
-    font-family: sans-serif;
-    top: 0%;
-
-}
-
-.itemText2 {
-    color: white;
-    font-family: sans-serif;
-    position: relative;
-    margin-bottom: 40px;
-}
-
-.itemwrap2 {
-    position: relative;
+    -o-object-fit: cover;
+    object-fit: cover;
+    -webkit-filter: brightness(80%);
+    filter: brightness(80%);
     width: 100%;
-
+    max-height: 200px;
+    z-index: -10;
 }
 
-.portBtn {
-
-    background-color: rgb(11, 159, 196);
-    border-color: white;
+.p-pic-inf {
     color: white;
+    background: rgba(0, 0, 0, 0.542);
+    padding: 10px;
+    position: relative;
+    top: -21%;
+    width: 100%;
+    transition: all 0.7s ease;
 
-    padding: 0.3rem 0.4rem;
-    border-radius: 10px;
-    font-size: 1rem;
-    position: absolute;
-    display: flex;
-    width: fit-content;
-    text-decoration: none;
-    bottom: 20px;
-    left: 50%;
-    transform: translate(-50%);
 }
 
-.portBtn:hover {
-    cursor: pointer;
-    transition-duration: 0.3s;
-    box-shadow: 0 1px 6px rgb(255, 255, 255);
+.p-pic-inf:hover {
+    background: rgba(0, 0, 0, 0.742);
+    color: rgba(50, 188, 223, 0.671);
 
 }
 
@@ -127,17 +109,32 @@
 
 @media screen and (max-width: 700px) {
 
+
     .grid2 {
         display: grid;
         grid-template-columns: 1fr;
         grid-template-rows: 1fr 1fr 1fr;
-        row-gap: 1.5rem;
+        -moz-column-gap: 2.5rem;
+        column-gap: 1.5rem;
+
+        align-content: center;
+        width: max(300px, 750px);
     }
 
-    .div12 {
-        width: max(290px, 65%);
-        margin: 0 auto;
-
+    .div1 {
+        grid-area: 1;
+        max-height: 200px;
     }
+
+    .div2 {
+        grid-area: 2;
+        max-height: 200px;
+    }
+
+    .div3 {
+        grid-area: 3;
+        max-height: 200px;
+    }
+
 
 }
