--- a/src/css/About.css
+++ b/src/css/About.css
@@ -5,7 +5,6 @@
 
 
 
-
 .gridHeader {
     color: rgba(255, 255, 255, 0.6);
     font-family: sans-serif;
@@ -31,14 +30,11 @@
     font-size: clamp(1.8rem, 4vw, 2rem);
 }
 
-
 .gridContainer {
 
     width: 100%;
     display: flex;
     align-items: center;
-
-
 
 }
 
@@ -46,9 +42,8 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 50%;
+    max-width: 750px;
 }
-
 
 .picST {
     width: 100%;
@@ -68,45 +63,21 @@
     color: white;
     left: 50%;
     transform: translate(-50%);
-
+    transition: all 0.8s ease;
 
 }
 
 .expBtn:hover {
 
-
     border: 3px solid rgba(11, 159, 196);
     cursor: pointer;
-    color: rgb(196, 178, 11);
-
+    background: none;
+    color: rgba(11, 159, 196);
+    font-size: 1.2rem;
+    font-weight: bold;
     transition-duration: 0.2s;
 
 
-
-}
-
-
-
-.about-Grid {
-    display: grid;
-
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    -moz-column-gap: 2.5rem;
-    column-gap: 2.5rem;
-    row-gap: 1.7rem;
-
-    width: 100%;
-    height: 100%;
-
-
-
-
-}
-
-.grid-div {
-    position: relative;
-    margin-bottom: 30px;
 
 }
 
@@ -203,94 +174,6 @@
 
 
 
-.about-text {
-
-    position: relative;
-    margin: 15px auto;
-    width: 93%;
-    font-family: sans-serif;
-    color: rgba(11, 159, 196);
-    line-height: 1.8;
-    font-size: 1rem;
-
-    letter-spacing: 1px;
-
-
-}
-
-
-.about-text2 {
-
-    position: relative;
-    margin: 0 auto;
-    width: 93%;
-    font-family: sans-serif;
-    color: white;
-    line-height: 1.8;
-    font-size: 1rem;
-
-    letter-spacing: 1px;
-}
-
-
-.about-content-header {
-
-    position: relative;
-    left: 7%;
-    width: 50%;
-    font-family: sans-serif;
-    color: rgba(255, 255, 255);
-    font-size: 1.2rem;
-    letter-spacing: 3px;
-
-
-}
-
-#a-content-h {
-    color: rgba(255, 255, 255);
-    margin-bottom: 20px;
-}
-
-.content-grid {
-
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-
-
-
-
-
-    position: relative;
-    left: 7%;
-    font-family: sans-serif;
-    color: rgba(255, 255, 255, 0.651);
-
-    letter-spacing: 2px;
-    line-height: 1.5rem;
-    font-size: 0.9rem;
-    width: 90%;
-    height: 60%;
-
-
-
-}
-
-.content {
-    display: flex;
-    align-items: center;
-}
-
-
-.graph {
-    display: block;
-    position: relative;
-    max-width: 50%;
-    max-height: 100%;
-    left: 50%;
-    transform: translate(-50%);
-}
-
 #over {
 
     text-decoration: none;
@@ -301,82 +184,65 @@
     display: none;
 }
 
-.about-pic {
-    width: 90%;
-    max-height: 270px;
-    -o-object-fit: cover;
-    object-fit: cover;
-    -o-object-position: top;
-    object-position: top;
-    border-radius: 20px;
+.tech-stack-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+
 }
 
-
-
-
-@media screen and (max-width: 800px) {
-
-
-
-
-
-
-    .gridContainer {
-
-        height: 85%;
-    }
-
-    .picST {
-        height: 80%;
-    }
-
-    .picSE {
-        width: 100%;
-    }
-
-
+.g-c-divs {
+    max-width: 600px;
+    margin: 10px;
+    margin-bottom: 30px;
 
 
 }
 
+.g-c-h {
+    color: rgba(255, 255, 255, 0.76);
+    text-align: center;
+    margin-bottom: 20px;
+    -webkit-text-decoration: underline 2px rgb(72, 210, 235);
+    text-decoration: underline 2px rgb(72, 210, 235);
+    font-size: 1.3rem;
+}
 
-@media screen and (max-width: 1200px) {
+.g-c-flex {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    position: relative;
+    margin-top: auto;
+    margin-bottom: 0;
 
-    .about-Grid {
 
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows: 1fr 1fr;
+}
 
-    }
+.g-c-content {
+    min-width: 150px;
+    min-height: 150px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 10px;
+
+    box-shadow: 0px 0px 12px 8px rgba(0, 0, 0, 0.23);
+    -webkit-box-shadow: 0px 0px 12px 8px rgba(0, 0, 0, 0.23);
+    -moz-box-shadow: 0px 0px 12px 8px rgba(0, 0, 0, 0.23);
 
 }
 
 
-@media screen and (max-width: 700px) {
+.g-c-img {
+    max-width: 80px;
+    height: auto;
+    margin-bottom: 5px;
+}
 
-    .about-Grid {
-
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-template-rows: 1fr auto 1fr 1fr;
-
-    }
-
-
-    .content-grid {
-        row-gap: 1rem;
-        -moz-column-gap: 2rem;
-        column-gap: 2rem;
-    }
-
-    .content {
-        line-height: 1.7rem;
-    }
-
-    .gridContainer {
-
-        border-left: 3px solid rgba(11, 159, 196);
-    }
-
+.g-c-p {
+    text-align: center;
+    color: rgb(167, 167, 167);
+    font-size: 1rem;
+    font-weight: 500;
 }
