--- a/src/css/Footer.css
+++ b/src/css/Footer.css
@@ -1,65 +1,192 @@
-.footer {
-    margin-top: 100px;
+.footer-section {
 
-    background: rgb(20, 20, 20);
-    color: white;
-    display: flex;
-    padding: 2.5em 0;
-
-    width: 100%;
-}
-
-
-
-.fotDiv {
-    margin: 0 auto;
-}
-
-
-.fotList {
-    display: flex;
-}
-
-.fotLi {
-    list-style-type: none;
-    padding: 5px;
-    color: rgba(255, 255, 255, 0.6);
+   width: 100%;
+   padding: 2em 0 2em 0;
+   background: rgb(20, 20, 20);
+   color: white;
+   margin-top: 4em;
 
 }
 
 
-.port-fot-inf{
-    margin-top: 40px;
-    top: 0;
-    color: rgba(255, 255, 255, 0.6);
+.f-contact-container {
+   position: relative;
+   top: -80px;
+   width: max(550px, 50%);
+   margin: 0 auto;
+   display: flex;
+   padding: 1.3em;
+   background: rgba(255, 255, 255, 0.2);
+}
+
+.f-c-div {
+   width: -webkit-fit-content;
+   width: -moz-fit-content;
+   width: fit-content;
 
 }
 
+.f-c-header {
+   margin-bottom: 5px;
+   font-size: clamp(1.2rem, 3vw, 1.6rem);
+}
+
+.f-c-inf {
+   font-size: 1rem;
+}
+
+.f-c-btn {
+   position: relative;
+   margin: auto 3% auto auto;
+   height: 100%;
+   min-width: 125px;
+   padding: 0.5em 1.6em;
+   border-radius: 20px;
+   background-color: rgba(0, 0, 0, 0);
+   color: rgb(72, 210, 235);
+   font-weight: bold;
+   font-size: clamp(1.1rem, 2vw, 1.3rem);
+
+}
+
+.f-links-container {
+
+   max-width: 600px;
+   margin: 0 auto;
+   min-height: 100px;
+   display: flex;
+   flex-wrap: wrap;
+   justify-content: space-around;
+}
 
 
-.fotH {
-    color: rgb(11, 159, 196);
-    font-family: sans-serif;
-    font-size: 1.3rem;
-    padding-bottom: 25px;
+.f-l-div {
+   max-width: 170px;
+   margin-bottom: 20px;
+}
+
+.f-l-header {
+   margin-bottom: 20px;
+   color: rgba(255, 255, 255, 0.842);
+}
+
+.f-l-ul {
+   list-style-type: none;
+
+}
+
+.f-l-lis {
+   color: rgba(255, 255, 255, 0.842);
+}
+
+.f-bottom-container {
+   width: 100%;
+   margin: 0 auto;
+   margin-top: 80px;
+   display: flex;
+   border-top: 1px solid grey;
+}
+
+.f-b-wraper {
+   display: flex;
+   width: max(300px, 80%);
+   margin: 0 auto;
+   margin-top: 15px;
+}
+
+.f-b-text {
+   font-size: 1rem;
+   color: rgba(255, 255, 255, 0.842);
+   margin-left: 7px;
+}
+
+.f-b-btn {
+   margin: 0 5% 0 auto;
+   padding: 0.4em 1.6em;
+   border-radius: 20px;
+   border: 3px solid grey;
+   background-color: rgba(0, 0, 0, 0);
+   font-size: clamp(0.9rem, 3vw, 1rem);
+   min-width: 148px;
+
+   -webkit-animation: myanimation 3s infinite;
+
+   animation: myanimation 3s infinite;
+}
+
+.f-b-btn:hover {
+   cursor: pointer;
 }
 
 .icons {
-    color: rgb(11, 159, 196);
-    width: 15px;
-    height: 15px;
+   color: rgb(11, 159, 196);
+   width: 15px;
+   height: 15px;
+}
+
+@-webkit-keyframes myanimation {
+   0% {
+      color: rgb(86, 12, 182);
+   }
+
+   25% {
+      color: rgb(170, 13, 255);
+   }
+
+   50% {
+      color: rgb(121, 25, 177);
+   }
+
+   75% {
+      color: rgb(206, 157, 218);
+   }
+
+   100% {
+      color: rgb(121, 19, 204);
+   }
+}
+
+@keyframes myanimation {
+   0% {
+      color: rgb(86, 12, 182);
+   }
+
+   25% {
+      color: rgb(170, 13, 255);
+   }
+
+   50% {
+      color: rgb(121, 25, 177);
+   }
+
+   75% {
+      color: rgb(206, 157, 218);
+   }
+
+   100% {
+      color: rgb(121, 19, 204);
+   }
 }
 
 
-@media screen and (max-width: 400px) {
+
+@media (max-width: 650px) {
+
+   .f-l-header {
+      text-align: center;
+   }
 
 
+   .f-contact-container {
+      width: max(280px, 90%);
+      margin: 0 auto;
+      display: block;
+   }
 
-    .fotList {
-        display: block;
-    }
-    
 
+   .f-c-btn {
+      margin-top: 15px;
+   }
 
 
 }
