--- a/src/css/Nav.css
+++ b/src/css/Nav.css
@@ -72,6 +72,7 @@ html {
     background-position-x: 0%;
     background-repeat: no-repeat;
     transition: background-size 0.2s ease-in-out;
+    margin: 0 7px 0 7px;
 
 }
 
