--- a/src/css/Portfolio.css
+++ b/src/css/Portfolio.css
@@ -18,6 +18,7 @@
 
 }
 
+
 .portH {
     left: 50%;
     transform: translate(-50%, -50%);
@@ -32,7 +33,7 @@
     z-index: -1;
 
     width: max(300px, 95%);
-    height: 75%;
+    min-height: 75%;
     margin: 0 auto;
 
     display: flex;
@@ -49,6 +50,7 @@
     grid-template-rows: 1fr 1fr;
     -moz-column-gap: 2.5rem;
     column-gap: 1.5rem;
+    row-gap: 2rem;
 
     align-content: center;
     width: max(300px, 750px);
@@ -56,17 +58,17 @@
 
 
 .div1 {
-    grid-area: 1 / 1 / 2 / 2;
+    grid-area: 2 / 1 / 2 / 2;
     max-height: 180px;
 }
 
 .div2 {
-    grid-area: 1 / 2 / 2 / 3;
+    grid-area: 2 / 2 / 2 / 3;
     max-height: 180px;
 }
 
 .div3 {
-    grid-area: 2 / 1 / 3 / 3;
+    grid-area: 1 / 1 / 3 / 3;
     max-height: 200px;
 }
 
@@ -122,17 +124,17 @@
     }
 
     .div1 {
-        grid-area: 1;
-        max-height: 200px;
-    }
-
-    .div2 {
         grid-area: 2;
         max-height: 200px;
     }
 
-    .div3 {
+    .div2 {
         grid-area: 3;
+        max-height: 200px;
+    }
+
+    .div3 {
+        grid-area: 1;
         max-height: 200px;
     }
 
