--- a/src/css/About.css
+++ b/src/css/About.css
@@ -93,6 +93,7 @@
     -webkit-animation: myanimation 5s infinite;
 
     animation: myanimation 5s infinite;
+    transition: all 0.5s ease;
 }
 
 .git-icon {
@@ -108,6 +109,7 @@
     -webkit-animation: myanimation 3s infinite;
 
     animation: myanimation 3s infinite;
+    transition: all 0.5s ease;
 }
 
 .git-icon:hover {
