--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -32,6 +32,8 @@
     padding: 0.5rem;
     font-size: 2.2rem;
     margin: 0 auto;
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
     width: fit-content;
     font-family: sans-serif;
 }
