install framer motion and add animation

--- a/src/css/About.css
+++ b/src/css/About.css
@@ -233,7 +233,12 @@
     box-shadow: 0px 0px 12px 8px rgba(0, 0, 0, 0.23);
     -webkit-box-shadow: 0px 0px 12px 8px rgba(0, 0, 0, 0.23);
     -moz-box-shadow: 0px 0px 12px 8px rgba(0, 0, 0, 0.23);
+    transition: all 0.3s ease-in-out;
+}
 
+
+.g-c-content:hover {
+    border-radius: 100px;
 }
 
 
