--- a/src/css/Portfolio.css
+++ b/src/css/Portfolio.css
@@ -17,3 +17,42 @@
     color: white;
 
 }
+
+.swiper-carousel {
+    min-height: 300px;
+    padding: 10px;
+
+}
+
+.swiper {
+    max-width: 700px;
+    height: 100%;
+}
+
+.swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: rgb(12, 12, 12);
+    color: white;
+    padding: 10px;
+    min-height: 400px;
+    /* Center slide text vertically */
+    border-radius: 15px;
+    display: flex;
+    margin-bottom: 50px;
+    justify-content: center;
+    align-items: center;
+}
+
+.swiper-slide img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.swiper-pagination-bullet{ 
+    width: 10px !important;
+    height: 10px !important;
+    opacity: 1 !important;
+}
